# Stealth-Engine

./: .codecov.yml  .coverage  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  premake5.lua
cmake/: Export.cmake  FindGLFW.cmake  FindOpenGL.cmake  FindPackageHandleStandardArgs.cmake
entity/: AIController.cpp  Character.h  Controller.cpp  Controller.h  GameObject.cpp  Intention.cpp  Intention.h
enum/: Button.h  ButtonState.h
include/: AIController.h  Actor.h  Character.h  Component.h  ComponentCreator.h  Creator.h  Factory.h  FactoryUtils.h  GameApplication.h  GameObject.h  GameObjectCreator.h  GameObjectFactory.h  GameObject_TImpl.cpp  InputManager.h  Intention.h  Locator.h  Object.cpp  Object.h  Physics.h  RenderComponent.h  Renderer.h  Scene.h  SquareRenderComponent.h  Transform.h  helper.h
include/application/: ApplicationContainer.h  ApplicationResult.h  GLFWWindowManager.h  GameApplication.h  GameClass.h  GameConfig.h  RunMode.h  RunModeData.h  WindowManager.h
include/component/: ActorComponent.h  Component.h  ComponentType.h  InputComponent.h  RenderComponent.h  Rigidbody.h  ScriptComponent.h  SquareRenderComponent.h  Transform.h
include/core/: EngineCore.h  ExceptionUtil.h  ExceptionUtil.tpp  Logger.h  Logger.tpp  Stream.h  Stream.tpp  StringUtil.h  StringUtil.tpp
include/core/factory/: ComponentCreator.h  Factory.h  FactoryUtils.h  GameManagerFactory.h  GameObjectCreator.h
include/core/math/: MathUtil.h  Vector2.h  Vector3.h
include/core/utils/: TraitsUtil.h  infix_iterator.h
include/debug/: Logger.h  Logger.tpp
include/entity/: Actor.h  GameObject.h  GameObject_TImpl.cpp
include/factory/: Factory.h  FactoryUtils.h  GameObjectCreator.h
include/geometry/: Vec2.h  Vec3.cpp  Vec3.h  Vec3_impl.h  Vector2.h  Vector3.cpp  Vector3.h
include/input/: AxisKeyBinding.h  ButtonState.h  InputManager.h  Key.h  KeyBinding.h  KeyData.h  KeyEvent.h  KeyStates.h
include/interfaces/application/: WindowManager.h
include/interfaces/core/factory/: ManagerFactory.h
include/interfaces/physics/: PhysicsManager.h
include/interfaces/renderer/: Renderer.h
include/object/: Object.h
include/physics/: Box2DPhysicsManager.h  Physics.h  PhysicsManager.h  Rigidbody.h
include/renderer/: Color.h  GLRenderer.h  Renderer.h  ShaderUtils.h
include/scene/: Scene.h
include/service/: InputManager.h  Locator.h  ScriptManager.h
include/test/: SmokeTestRunner.h
include/utils/: Color.cpp  Color.h  ExceptionUtil.h  ExceptionUtil.tpp  StringUtil.h  StringUtil.tpp
include/world/: Actor.h  Component.h  GameObject.h  GameObject_TImpl.cpp  Scene.h  SceneData.h  SceneManager.h
libs/: Box2D.lib  libglfw.3.2.dylib  libglfw.so.3.2
libs/glfw/lib/: libglfw.so.3.2
resources/shaders/: SimpleFragmentShader.glsl
scene/: Scene.cpp
src/application/: ApplicationContainer.cpp  GLFWWindowManager.cpp  GameApplication.cpp  GameClass.cpp  RunModeData.cpp  WindowManager.cpp
src/component/: ActorComponent.cpp  Component.cpp  InputComponent.cpp  RenderComponent.cpp  ScriptComponent.cpp  SquareRenderComponent.cpp  Transform.cpp
src/components/: ActorComponent.cpp  InputComponent.cpp  RenderComponent.cpp  Rigidbody.cpp  ScriptComponent.cpp  SquareRenderComponent.cpp  Transform.cpp
src/core/: EngineCore.cpp
src/core/factory/: ComponentCreator.cpp  Factory.cpp  GameManagerFactory.cpp  GameObjectCreator.cpp
src/core/math/: Vector3.cpp
src/core/utils/: ExceptionUtil.cpp
src/entity/: Actor.cpp  Character.cpp  ComponentCreator.cpp  Creator.cpp  Factory.cpp  GameObject.cpp  GameObject.h  GameObjectCreator.cpp  GameObjectFactory.cpp  HumanController.cpp  HumanController.h
src/enum/: ButtonEvent.h  KeyDynamicState.h
src/factory/: ComponentCreator.cpp  Factory.cpp  GameObjectCreator.cpp
src/gameplay/: ScriptManager.cpp
src/geometry/: Point3.h  Vec3.cpp
src/helper/: helper.cpp  helper.h
src/input/: InputManager.cpp
src/object/: Object.cpp
src/physics/: Box2DPhysicsManager.cpp  Physics.cpp  PhysicsManager.cpp  Rigidbody.cpp
src/renderer/: Color.cpp  GLRenderer.cpp  Renderer.cpp  ShaderUtils.cpp
src/scene/: Scene.cpp  Scene.h  SceneData.cpp  SceneManager.cpp
src/service/: InputManager.cpp  Locator.cpp  ScriptManager.cpp
src/test/: SmokeTestRunner.cpp  TestRunner.cpp  TestRunner.h
src/utils/: Color.cpp  ExceptionUtil.cpp
src/world/: Actor.cpp  Component.cpp  GameObject.cpp  Object.cpp  Scene.cpp  SceneData.cpp  SceneManager.cpp
test/: TestFriend.h  catch.hpp  testmain.cpp
test/unittests/core/: TestEngineCore.cpp
test/unittests/factory/: TestFactory.cpp
test/unittests/geometry/: TestVec2.cpp  TestVec3.cpp
test/unittests/physics/: TestPhysics.cpp
test/unittests/utils/: TestStringUtils.cpp
test/unittests/world/: TestScene.cpp  TestSceneData.cpp  TestSceneManager.cpp
tests/: TestGameObjectFactory.cpp  catch.hpp  catch_with_main.hpp  testdummy.cpp  testmain.cpp
tests/factory/: TestFactory.cpp  TestGameObjectFactory.cpp
tests/geometry/: TestVec3.cpp  testvec2.cpp  testvec3.cpp
tests/physics/: TestPhysics.cpp
tests/utils/: teststringutils.cpp
